--- a/bedienbaar.html
+++ b/bedienbaar.html
@@ -134,7 +134,7 @@
               3.1 CAPTCHA’s zijn toegankelijk voor iedereen.  
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -159,12 +159,12 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Een toegankelijke CAPTCHA moet op zijn minst beschikbaar zijn als audiofragment welke je met het toetsenbord kan bereiken. 
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -188,7 +188,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Je kunt ook een vernieuwde CAPTCHA of andere controles gebruiken. 
             </p>
@@ -198,7 +198,7 @@
               3.2 Bewegend beeld en geluid dat automatisch start kan uitgezet worden of stopt binnen 3 seconden.
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -222,7 +222,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Beter is om helemaal geen beeld en geluid te gebruiken dat automatisch start.
             </p>
@@ -232,7 +232,7 @@
               3.3 Bezoekers hebben geen last van een tijdslimiet bij het invullen van gegevens 
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -257,12 +257,12 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Sommige bezoekers hebben meer tijd dan gemiddeld nodig om gegevens in te vullen. Bijvoorbeeld omdat zij voorleessoftware gebruiken of dyslectisch zijn. Deze bezoekers moeten de tijdslimiet op kunnen heffen of verlengen.
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -286,7 +286,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Zorg ervoor dat de gebruiker de tijdslimiet kan stopzetten, aanpassen of uitbreiden
             </p>
@@ -296,7 +296,7 @@
               3.4 Bezoekers kunnen zelf fouten voorkomen bij formulieren waarbij belangrijke acties in gang worden gezet door te annuleren, controleren of bevestigen.
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -321,12 +321,12 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Soms kan het verkeerd invullen van een formulier ingrijpende gevolgen hebben. Door bezoekers de mogelijkheid te bieden een inzending terug te trekken, help je hen grote fouten voorkomen.
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -350,7 +350,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             Let vooral op bij wettelijke en financiële transacties, hier zijn de gevolgen het grootst. 
             </p>
           </article>
@@ -359,7 +359,7 @@
               3.5 Alle onderdelen van formulieren zijn via het toetsenbord te bereiken en bedienen in logische volgorde.
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -384,12 +384,12 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Een formulier wat bruikbaar is d.m.v. het toetsenbord zorgt voor een betere gebruikservaring. 
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -413,7 +413,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Gebruik een passende styling die bij de vormgeving past en ook nog eens toegankelijk is.
             </p>
@@ -423,7 +423,7 @@
               3.6 Alle invoervelden hebben een duidelijke instructie.
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -448,12 +448,12 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Stel jezelf als beheerder de vraag wat je van de gebruiker wilt vragen. Is een invoerveld noodzakelijk? Mogen gebruikers een typefoutje maken?
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -477,7 +477,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Bied namen en alt-tekst aan invoervelden en groepeer bij elkaar horende velden, uiteraard met voldoende tussenruimte
             </p>
