--- a/begrijpelijk.html
+++ b/begrijpelijk.html
@@ -140,7 +140,7 @@
               2.1 Is de tekst in taalniveau B1 geschreven?
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -165,12 +165,12 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Taalniveau B1 staat voor eenvoudig Nederlands. Een tekst op B1-niveau bestaat uit makkelijke woorden en uit korte, eenvoudige en actieve zinnen. 
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -194,7 +194,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Voor het schrijven van de teksten kan de redactie gebruik maken van een taaltool. Deze tool met het gemiddelde taalniveau van een tekst en geeft aan welke aanpassingen nodig zijn om het gewenste niveau te bereiken. 
             </p>
@@ -204,7 +204,7 @@
               2.2 Heeft de pagina een duidelijke titel die de inhoud van de pagina beschrijft?
             </h1>
             <br />
-            <span>
+            <div>
             <svg
                 width="24"
                 height="24"
@@ -229,12 +229,12 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               De toegankelijkheid van teksten zit hem niet alleen in de structuur. Een toegankelijk tekst is ook begrijpelijk. Die begrijpelijkheid kun je vergroten door duidelijke titels en koppen te gebruiken. 
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -258,7 +258,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               De titel van een pagina moet duidelijk beschrijven waar de pagina over gaat en (tussen-)kippen moeten het onderwerp of het doel van de paragrafen die erbij horen beschrijven. 
             </p>
@@ -267,7 +267,7 @@
             <h1>
               2.3 Heeft de tekst duidelijk en beschrijvende koppen en tussenkoppen?            </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -292,12 +292,12 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               De toegankelijkheid van teksten zit hem niet alleen in de structuur. Een toegankelijk tekst is ook begrijpelijk. Die begrijpelijkheid kun je vergroten door duidelijke titels en koppen te gebruiken. 
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -321,7 +321,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Vermijd grote lappen tekst. Grote lappen tekst zijn erg lastig te lezen voor gebruikers met een autismespectrum stoornis of gebruikers met dyslexie 
             </p>
@@ -330,7 +330,7 @@
             <h1>
               2.4 Voor ingewikkeldere afbeeldingen die informatie bevatten, zoals grafieken of infographics, is een langere beschrijving gemaakt (naast de alt-tekst).            </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -355,11 +355,11 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               De tekstuele uitleg is niet alleen handig voor gebruikers met visuele beperkingen, maar een tekstuele uitleg is ook gelijk goed voor de vindbaarheid. Google kan de tekst indexeren.             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -383,14 +383,14 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             Plaats een bijschrift boven of onder de afbeelding.             </p>
           </article>
           <article id="article2_5" class="content-item hide">
             <h1>
               2.5 Tekst is niet als afbeelding geplaatst maar als echte tekst.             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -415,12 +415,12 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Sommige gebruikers zullen de website bezoeken met behulp van een alleen-tekst browser, of kunnen afbeeldingen hebben uitgeschakeld in een gewone browser. Afbeeldingen van tekst veroorzaken problemen, omdat deze voor gebruikers moeilijker te begrijpen zijn. Afbeeldingen van tekst veroorzaken ook problemen voor gebruikers als ze het formaat van websites willen wijzigen om ze duidelijker te kunnen lezen, omdat afbeeldingen op deze manier niet goed werken. Ze dragen ook bij aan de tijd die nodig is om jouw website te laden, dat is ook vaak een reden waarom gebruikers een website verlaten, een kwestie van ongeduld. 
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -444,7 +444,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Uitzonderingen voor afbeeldingen van tekst zijn onderworpen aan richtlijnen voor kleur. 
             </p>
@@ -454,7 +454,7 @@
               2.6 Tabellen hebben een bijschrift of samenvatting.
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -479,12 +479,12 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Een bijschrijft of samenvatting geeft vooraf aan of de informatie in de tabel de moeite waar is om door te nemen. Gebruikers kunnen hun tijd en aandacht spenderen aan andere content op de website. 
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -508,7 +508,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Om het bijschrift of de samenvatting te verbinden aan de tabel moet je de juiste code gebruiken.
             </p>
@@ -518,7 +518,7 @@
               2.7 De werking van het formulier is voorspelbaar (bijv. verzenden pas na zelf klikken of informatie daarover).
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -542,7 +542,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Zorg dat jouw bezoeker op de hoogte is van de wijziging die plaats gaat vinden. Informeren betekent dat je in tekst aangeeft wat er zal gebeuren als er een optie wordt geselecteerd of formulierveld wordt ingevuld. Voorkom ook dat een formulier automatisch wordt verzonden zodra het laatste veld is ingevuld. Maak bijvoorbeeld een verzendknop onder het formulier. Pas als de bezoeker de knop aanklikt, verandert de inhoud van de pagina.
             </p>
