--- a/robuust.html
+++ b/robuust.html
@@ -81,42 +81,6 @@
         <p>Robuust</p>
       </a>
     </aside>
-      <li>
-        <a onclick="element">
-          <svg
-            width="33"
-            height="21"
-            viewBox="0 0 33 21"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M13.1123 20L12.1043 15.828H6.44827L5.46827 20H0.708266L6.56027 0.595999H12.1323L17.9843 20H13.1123ZM7.23227 12.496H11.3203L9.27627 3.928L7.23227 12.496ZM31.1399 15.688C31.1399 16.248 31.2146 16.6587 31.3639 16.92C31.5319 17.1813 31.7932 17.3773 32.1479 17.508L31.2239 20.392C30.3092 20.3173 29.5626 20.1213 28.9839 19.804C28.4052 19.468 27.9572 18.9453 27.6399 18.236C26.6692 19.7293 25.1759 20.476 23.1599 20.476C21.6852 20.476 20.5092 20.0467 19.6319 19.188C18.7546 18.3293 18.3159 17.2093 18.3159 15.828C18.3159 14.204 18.9132 12.9627 20.1079 12.104C21.3026 11.2453 23.0292 10.816 25.2879 10.816H26.7999V10.172C26.7999 9.29467 26.6132 8.69733 26.2399 8.38C25.8666 8.044 25.2132 7.876 24.2799 7.876C23.7946 7.876 23.2066 7.95067 22.5159 8.1C21.8252 8.23067 21.1159 8.41733 20.3879 8.66L19.3799 5.748C20.3132 5.39333 21.2652 5.12267 22.2359 4.936C23.2252 4.74933 24.1399 4.656 24.9799 4.656C27.1079 4.656 28.6666 5.09467 29.6559 5.972C30.6452 6.84933 31.1399 8.16533 31.1399 9.92V15.688ZM24.4479 17.312C25.4559 17.312 26.2399 16.836 26.7999 15.884V13.252H25.7079C24.6999 13.252 23.9439 13.4293 23.4399 13.784C22.9546 14.1387 22.7119 14.6893 22.7119 15.436C22.7119 16.0333 22.8612 16.5 23.1599 16.836C23.4772 17.1533 23.9066 17.312 24.4479 17.312Z"
-              fill=""
-            />
-          </svg>
-        </a>
-      </li>
-
-      <li>
-        <a href="">
-          <svg
-            width="36"
-            height="36"
-            viewBox="0 0 36 36"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M18 36C27.9411 36 36 27.9411 36 18C36 8.05887 27.9411 0 18 0C8.05887 0 0 8.05887 0 18C0 27.9411 8.05887 36 18 36ZM19.9943 32.0033C26.8608 31.0343 32.1429 25.134 32.1429 18C32.1429 10.866 26.8608 4.96574 19.9943 3.99665C18.9005 3.84229 18 4.75091 18 5.85548L18 18L18 30.1445C18 31.2491 18.9005 32.1577 19.9943 32.0033Z"
-              fill=""
-            />
-          </svg>
-        </a>
-      </li>
-    </ul>
 
     <!-- Dit is de sectie waar de content staat -->
 
@@ -165,7 +129,7 @@
               HTML-codes
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -190,7 +154,7 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Als een website “onder water” goed in elkaar
               zit, dan is de basis voor toegankelijkheid
@@ -200,7 +164,7 @@
               toegankelijkheidseisen te voldoen.
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -224,7 +188,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Voor het bouwen van websites zijn
               internationale standaarden ontwikkeld. Door de
@@ -244,7 +208,7 @@
               te maken.
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -269,7 +233,7 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Als je wilt dat jouw tekst in kolommen of in
               een tabel verschijnt, gebruik dan niet de
@@ -281,7 +245,7 @@
               gelezen, niet kolom voor kolom.
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -305,7 +269,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Tabellen moeten gemaakt worden met de
               tabelfuncties van de editor in het CMS. Voor
@@ -322,7 +286,7 @@
               hebben een tekstueel alternatief
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -347,7 +311,7 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Door afbeeldingen te voorzien van een
               tekstueel alternatief maak je ze dus
@@ -358,7 +322,7 @@
               websites.
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -382,7 +346,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Een tekstueel alternatief werkt alleen als de
               beschrijving adequaat is. In veel gevallen
@@ -408,7 +372,7 @@
               beschrijft.
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -433,7 +397,7 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Wanneer het niet duidelijk is welk ingevuld
               veld foutief is ingevuld kunnen gebruikers
@@ -442,7 +406,7 @@
               afbeelding zelf.
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -466,7 +430,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Als de afbeelding in een link staat met een
               tekst erbij, dan is de afbeelding ook
@@ -487,7 +451,7 @@
               hulptechnologieën genegeerd worden.
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -512,7 +476,7 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Decoratieve afbeeldingen zijn niet relevant
               voor gebruikers van hulptechnologieën. De
@@ -520,7 +484,7 @@
               begrijpelijkheid niet beïnvloeden.
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -544,7 +508,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Dit kan bijvoorbeeld door de alt-tekst leeg te
               laten.
@@ -559,7 +523,7 @@
               alternatief dat de inhoud beschrijft.
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -584,7 +548,7 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Alle vormen van audio en video moeten een kort
               tekstalternatief krijgen. Dit is vergelijkbaar
@@ -595,7 +559,7 @@
               ieder geval waar ze mee te maken hebben.
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -619,7 +583,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Hoe je dit alternatief plaatst hangt af van de
               techniek die gebruikt is om het
@@ -635,7 +599,7 @@
               (indien nodig) een transcript.
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -660,7 +624,7 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               In het transcript vertel je zo compleet
               mogelijk het verhaal van het filmpje. Je
@@ -670,7 +634,7 @@
               op in het transcript.
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -694,7 +658,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Kun je in het filmpje bijvoorbeeld op een knop
               drukken, dan neem je in het transcript een
@@ -712,7 +676,7 @@
               HTML-code.
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -737,7 +701,7 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Gegevens in de tabel hebben zowel horizontaal
               als verticaal een relatie met elkaar. Met de
@@ -753,7 +717,7 @@
               en logische manier presenteren.
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -777,7 +741,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Sommige tabellen zitten heel ingewikkeld in
               elkaar, met meerdere niveaus en koppen. Het
