--- a/waarneembaar.html
+++ b/waarneembaar.html
@@ -140,7 +140,7 @@
               gesproken tekst en andere geluiden
             </h1>
             <br />
-            <span>
+              <div>
               <svg
                 width="24"
                 height="24"
@@ -165,7 +165,7 @@
               </svg>
 
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Ondertiteling met de gesproken tekst en andere
               geluiden zorgt ervoor dat gebruikers met een
@@ -176,7 +176,7 @@
               toegevoegd.
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -200,7 +200,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               De ene mediaplayer biedt meer
               toegankelijkheidsopties dan de andere. Kies
@@ -217,7 +217,7 @@
               nodig) een audiobeschrijving
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -240,9 +240,8 @@
                   fill=""
                 />
               </svg>
-
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               In een audiobeschrijving vertelt een stem
               belangrijke visuele details die je niet kunt
@@ -255,7 +254,7 @@
               momenten dat er pauzes zijn in het filmpje.
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -279,7 +278,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Als alle belangrijke visuele details ook af te
               leiden zijn uit het geluid is een
@@ -298,7 +297,7 @@
               visuele aanwijzingen (bijv. rode kleur).
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -321,9 +320,8 @@
                   fill=""
                 />
               </svg>
-
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Door één aanwijzing te gebruiken is de kans
               groot dat hiermee bepaalde gebruikers
@@ -331,7 +329,7 @@
               aanwijzingen.
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -355,7 +353,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Gebruik niet alleen aanwijzingen uit hetzelfde
               spectrum (visueel, auditief), maar combineer
@@ -367,7 +365,7 @@
               1.4 Fouten of niet ingevulde velden zijn duidelijk aangegeven en er is, als dat kan, een suggestie voor verbetering.
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -390,14 +388,13 @@
                   fill=""
                 />
               </svg>
-
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Wanneer het niet duidelijk is welk ingevuld veld foutief is ingevuld kunnen gebruikers vastlopen. 
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -421,7 +418,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             Verrijk de foutmelding met een concreet invulvoorbeeld.
             </p>
           </article>
@@ -430,7 +427,7 @@
               1.5 De inhoud kan worden voorgelezen door een toepassing op de site/app
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -453,14 +450,13 @@
                   fill=""
                 />
               </svg>
-
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Voor het voorlezen hoeft geen speciale screenreader gebruikt te worden. 
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -484,7 +480,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Geef duidelijk aan waar gebruikers de inhoud kunnen laten voorlezen. 
             </p>
@@ -494,7 +490,7 @@
               1.6 De inhoud kan worden uitvergroot tot 200% zonder dat er inhoud uit het zicht verdwijnt
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -517,14 +513,13 @@
                   fill=""
                 />
               </svg>
-
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Door de inhoud eenvoudig te vergroten kunnen mensen met een visuele beperking de inhoud beter waarnemen. 
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -548,7 +543,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Geef deze eis duidelijk aan bij de ontwikkelaar van de website/app
             </p>
@@ -558,7 +553,7 @@
               1.7 Gebruikers kunnen de tekstgrootte aanpassen
             </h1>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -581,14 +576,13 @@
                   fill=""
                 />
               </svg>
-
               <h2 class="uitleg">Uitleg</h2>
-            </span>
+            </div>
             <p>
               Door de teksten eenvoudig te vergroten kunnen mensen met een visuele beperking de inhoud beter waarnemen. 
             </p>
             <br />
-            <span>
+            <div>
               <svg
                 width="24"
                 height="24"
@@ -612,7 +606,7 @@
                 />
               </svg>
               <h2 class="tip">Tip</h2>
-            </span>
+            </div>
             <p>
               Geef duidelijk aan waar de gebruikers de tekstgrootte kunnen aanpassen. 
             </p>
